# ensemble

./: .gitignore  CHOICES.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  live.yml  pages.yml
crates/ensemble-cli/: Cargo.toml
crates/ensemble-cli/src/: main.rs  scaffold.rs  trace_serve.rs
crates/ensemble-core/: Cargo.toml
crates/ensemble-core/src/: actor.rs  backend.rs  bus.rs  error.rs  event.rs  ids.rs  lib.rs  predicate.rs  scenario.rs  scheduler.rs  until.rs  world.rs
crates/ensemble-core/tests/: echo.rs  world_state.rs
crates/ensemble-runtime/: Cargo.toml  pricing.toml
crates/ensemble-runtime/src/: actors.rs  backend.rs  lib.rs  persona.rs  pricing.rs  resources.rs  stage_sink.rs  tools.rs
crates/ensemble-runtime/src/backends/: anthropic.rs  auth_hint.rs  mock.rs  mod.rs  openai.rs  vllm.rs
crates/ensemble-runtime/tests/: mock_backend.rs
demo/: hello_world.py  persona_demo.py
demo/site/: trace.jsonl
docs/: quickstart.md
docs/reference/: cli.md  index.md  observability.md  personas.md  predicates.md  runtime.md  scenarios.md  sweeps.md  tools.md  trace-viewer.md  traces.md  world-api.md
examples/agora/: bake_trace.py  pyproject.toml  scenarios.toml  world.toml
examples/agora/agora/: __init__.py
examples/agora/personas/: chatty_neutral.toml  confused_new_user.toml  enterprise_admin.toml  frustrated_power_user.toml  patient_retail.toml
examples/agora/python_ext/: Cargo.toml
examples/agora/python_ext/src/: lib.rs
examples/agora/scenarios/: __init__.py  enterprise_audit.py  refund_storm.py  single_ticket.py
examples/agora/world/: Cargo.toml
examples/agora/world/src/: lib.rs  predicates.rs  state.rs  tools.rs
examples/plank/: bake_trace.py  pyproject.toml  scenarios.toml  world.toml
examples/plank/personas/: confused_new_user.toml  enterprise_admin.toml  frustrated_power_user.toml  patient_retail.toml
examples/plank/plank/: __init__.py
examples/plank/python_ext/: Cargo.toml
examples/plank/python_ext/src/: lib.rs
examples/plank/scenarios/: __init__.py  enterprise_audit.py  refund_storm.py  single_ticket.py
examples/plank/world/: Cargo.toml
examples/plank/world/src/: lib.rs  predicates.rs  state.rs  tools.rs
python/ensemble/: Cargo.toml  __init__.py  _native.pyi  cli_mcp.py  cli_models.py  cli_run.py  cli_runs.py  cli_stage.py  cli_sweep.py  cli_worlds.py  env.py  mcp_server.py  persona.py  scenario.py  scenario_toml.py  stage.py  tool_worker.py  world.py  world_manifest.py  worlds_registry.py
python/ensemble/src/: lib.rs  world_registry.rs
scripts/: deploy_site.sh  render_reference.py
shared/trace-viewer/: viewer.js
shared/trace-viewer/sources/: local-jsonl.js  stage-polling.js
site/: agora.html  compare.html  compare.js  docs.html  index.html  mcp.html  observability.html  personas.html  plank.html  quickstart.html  scenarios.html  style.css  sweeps.html  tools.html  trace.jsonl  viewer.html  viewer.js  worlds.html
site/reference/: cli.html  index.html  observability.html  personas.html  predicates.html  runtime.html  scenarios.html  stage.html  sweeps.html  tools.html  traces.html  training.html  world-api.html
tests/: test_agent_tool_filtering.py  test_agora_primitives.py  test_agora_world.py  test_async_with.py  test_cli_models.py  test_cli_runs.py  test_core_primitives.py  test_cost_summary.py  test_cwd_world_autodiscover.py  test_env_dotenv.py  test_external_agent_instance_scoped.py  test_mcp_scenario_driving.py  test_mcp_tools_exposure.py  test_opener.py  test_persona_wiring.py  test_plank_primitives.py  test_plank_world.py  test_plugin_worlds.py  test_predicates.py  test_resource_declarations.py  test_run_dirs.py  test_scenario_toml.py  test_seed_attribution.py  test_skypilot_backend.py  test_stage_config.py  test_stage_run_id.py  test_stage_runs_list.py  test_stage_sink.py  test_stage_sweep.py  test_stage_training.py  test_stage_viewer_push.py  test_sweep_runner.py  test_tool_error_feedback.py  test_tool_inference.py  test_tool_progress_helper.py  test_trace_sink_appends.py  test_train_pipeline.py  test_trained_persona_wiring.py  test_until_combinators.py  test_world_apply.py  (+5 more)
tests/integration/: test_basic_scenario.py  test_toml_parity.py
tests/integration_live/: README.md  conftest.py  test_anthropic_single_agent.py  test_mcp_live_claude.py  test_openai_single_agent.py  test_refund_storm_small.py
train/: pyproject.toml
train/ensemble_train/: __init__.py  cli.py  self_play.py  spec.py  stage_reporter.py  trainer.py
train/ensemble_train/backends/: __init__.py  local.py  modal.py  skypilot.py
