[workspace]
resolver = "2"
members = [
    "crates/ensemble-core",
    "crates/ensemble-runtime",
    "crates/ensemble-cli",
    "examples/plank/world",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license-file = "LICENSE.private"
publish = false

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
pyo3-asyncio-0-21 = { package = "pyo3-asyncio", version = "0.21", features = ["tokio-runtime"] }

[profile.release]
lto = "thin"
codegen-units = 1
