[workspace]
resolver = "2"
members = [
    "crates/ensemble-core",
    "crates/ensemble-runtime",
    "crates/ensemble-cli",
    "python/ensemble",
    "examples/plank/world",
    "examples/plank/python_ext",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
publish = false

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "blocking"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
clap = { version = "4", features = ["derive"] }
toml = "1"
pyo3 = { version = "0.28", features = ["abi3-py310"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }

[profile.release]
lto = "thin"
codegen-units = 1
