[project]
name = "ensemble"
version = "0.1.0"
description = "Multi-user, multi-agent RL environment framework."
authors = [
    { name = "Tejas Prabhune", email = "tejas.prabhune@gmail.com" },
]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "maturin>=1.7,<2.0",
    "ensemble-train",
    "plank",
]

[tool.uv.sources]
ensemble-train = { workspace = true }
plank = { workspace = true }

[tool.maturin]
manifest-path = "python/ensemble/Cargo.toml"
module-name = "ensemble._native"
python-source = "python"
python-packages = ["ensemble"]
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "python/ensemble/Cargo.toml" },
    { file = "python/ensemble/src/**/*.rs" },
    { file = "crates/**/*.rs" },
    { file = "crates/**/Cargo.toml" },
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
]

[tool.uv.workspace]
members = ["train", "examples/plank"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"
