[package]
name = "ensemble-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "The `ensemble` CLI: init, run, trace, train."

[[bin]]
name = "ensemble"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
