[package]
name = "ensemble-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Pure simulation primitives for Ensemble: world, actors, bus, traces, scheduler."

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread", "test-util"] }
