[package]
name = "ensemble-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "LLM client layer and tool runtime for Ensemble."

[features]
default = ["mock"]
mock = []

[dependencies]
ensemble-core = { path = "../ensemble-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
parking_lot = "0.12"

[dev-dependencies]
tokio = { workspace = true }
