[project]
name = "plank"
version = "0.1.0"
description = "Plank: worked example world for Ensemble."
requires-python = ">=3.10"
dependencies = ["ensemble"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "plank"
module-root = ""

[tool.uv.sources]
ensemble = { workspace = true }
