[project]
name = "plank"
version = "0.1.0"
description = "Plank: worked example world for Ensemble."
requires-python = ">=3.10"
dependencies = ["ensemble"]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "python_ext/Cargo.toml"
module-name = "plank._native"
python-source = "."
python-packages = ["plank"]
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "python_ext/Cargo.toml" },
    { file = "python_ext/src/**/*.rs" },
    { file = "world/src/**/*.rs" },
    { file = "world/Cargo.toml" },
]

[tool.uv.sources]
ensemble = { workspace = true }
