[package]
name = "ensemble-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Python bindings for Ensemble (pyo3)."

[lib]
name = "_native"
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = []
# extension-module is enabled by maturin via [tool.maturin].features
extension-module = ["pyo3/extension-module"]

[dependencies]
ensemble-core = { path = "../../crates/ensemble-core" }
ensemble-runtime = { path = "../../crates/ensemble-runtime" }
pyo3 = { workspace = true }
pyo3-asyncio-0-21 = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1"
parking_lot = "0.12"
