[package]
name = "agora"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Agora: a worked example world for Ensemble (fake customer service SaaS)."

[dependencies]
ensemble-core = { path = "../../../crates/ensemble-core" }
ensemble-runtime = { path = "../../../crates/ensemble-runtime" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = "0.12"
thiserror = { workspace = true }
